deploy: d3178d64cc5a6ef88ba01bcb4a4822c0471f96fa

--- a/the_machinery_book/gameplay_coding/index.html
+++ b/the_machinery_book/gameplay_coding/index.html
@@ -155,7 +155,7 @@
 <h2 id="coding-within-our-entity-component-system"><a class="header" href="#coding-within-our-entity-component-system">Coding within our Entity Component System</a></h2>
 <p>The Machinery uses an Entity Component System; therefore, most of your gameplay code will run via Engines or Systems. To learn more about these, please follow this <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book//gameplay_coding/ecs/index.html">link</a>.</p>
 <h2 id="general-code-entry-points-using-simulation-entry-component"><a class="header" href="#general-code-entry-points-using-simulation-entry-component">General code entry points using Simulation Entry Component</a></h2>
-<p>The Machinery also offers you a Simulation Entry Component which will, when the parent entity is spawned, set up a system with that is used to run code at startup and each frame. Read more <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book/gameplay_coding/simulation_entry.html">here</a>.</p>
+<p>The Machinery also offers you a Simulation Entry Component which will, when the parent entity is spawned, set up a system with that is used to run code at start-up and each frame. Read more <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book/gameplay_coding/simulation_entry.html">here</a>.</p>
 
                     </main>
 
