deploy: ad1a31f6f5dcd781bd41f3b63af8446bd4bebef0

--- a/the_machinery_book/print.html
+++ b/the_machinery_book/print.html
@@ -3944,7 +3944,7 @@ to open it in the Graph Editor:</p>
 <tr><td>Tick Event</td><td>Is called every frame.</td><td><img src="https://www.dropbox.com/s/1t7hwmu37wr4aua/tm_guide_entity_graph_tick.png?dl=1" width="277" height="120"></td></tr>
 <tr><td>Terminate Event</td><td>Is called before the component is removed from the entity.</td><td><img src="https://www.dropbox.com/s/nx3tehccedx7qic/tm_guide_entity_graph_terminate.png?dl=1" width="277" height="120"></td></tr>
 <tr><td>Custom Event</td><td>Is called when ever the named event<br> is triggered with either a &quot;Trigger Event&quot;<br> node or from the outside with &quot;Trigger Remote Event&quot;</td><td><img src="https://www.dropbox.com/s/ngv3k25u02k8iq6/tm_guide_entity_graph_create_custom_event.png?dl=1" width="277" height="120"></td></tr>
-<tr><td>Trigger Event</td><td>Ttriggers a event.</td><td><img src="https://www.dropbox.com/s/tqyg6scxjcsk3vi/tm_guide_entity_graph_trigger.png?dl=1" width="277" height="120"></td></tr>
+<tr><td>Trigger Event</td><td>Triggers an event.</td><td><img src="https://www.dropbox.com/s/tqyg6scxjcsk3vi/tm_guide_entity_graph_trigger.png?dl=1" width="277" height="120"></td></tr>
 <tr><td>Trigger Remote Event</td><td>Triggeres a event on a remote Entity</td><td><img src="https://www.dropbox.com/s/jrnapuuq93d0kx8/tm_guide_entity_graph_trigger_remote.png?dl=1" width="277" height="120"></td></tr>
 <tr><td>UI Tick</td><td>Is ticked every frame regardless if the game is paused or not!</td><td><img src="https://www.dropbox.com/s/6ejvwvc5yndpo87/tm_guide_entity_graph_ui_tick.png?dl=1" width="277" height="120"></td></tr>
 </tbody></table>
@@ -4004,7 +4004,7 @@ to open it in the Graph Editor:</p>
 <li>The Grid node</li>
 <li>The For node</li>
 </ul>
-<p><em>The gird node for example:</em></p>
+<p><em>The Grid node for example:</em></p>
 <p><img src="https://www.dropbox.com/s/9fawc756lyf0k3h/tm_guide_entity_graph_loop.png?dl=1" alt="" /></p>
 <h3 id="subgraphs"><a class="header" href="#subgraphs">Subgraphs</a></h3>
 <p>You can organize your code into smaller reusable units and combine nodes as a subgraph! Using subgraphs makes your Graph more user-friendly, and it will look less like spaghetti. You can store your subgraph as a <code>.entity_graph</code> asset in your asset browser and allow it to be reused across your project! Which enables you to maximal flexibility! </p>
